--- a/ArdMonitor/.project
+++ b/ArdMonitor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ArdMonitor</name>
+	<name>ArdControl</name>
 	<comment></comment>
 	<projects>
 	</projects>
