--- a/ArdControl/AndroidManifest.xml
+++ b/ArdControl/AndroidManifest.xml
@@ -9,7 +9,7 @@
     
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="23" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +19,8 @@
         <activity
             android:name="com.example.ardcontrol.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnchanged" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
